apps/base/uptime-kuma/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`uptime.mhtx.net`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: 3001
  tls:
    certResolver: porkbun
